[gd_scene load_steps=12 format=3 uid="uid://dgd0ag2prmrcp"]

[ext_resource type="PackedScene" uid="uid://dijksomgphj8l" path="res://scenes/level.tscn" id="1_cxjqo"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_l77q7"]
[ext_resource type="PackedScene" uid="uid://os15kthfsmki" path="res://scenes/player.tscn" id="2_4kq3l"]
[ext_resource type="PackedScene" uid="uid://pg758lbec4jt" path="res://scenes/fire.tscn" id="3_lqplh"]
[ext_resource type="PackedScene" uid="uid://c4h6rplc6pii2" path="res://scenes/hud.tscn" id="5_5yc50"]
[ext_resource type="PackedScene" uid="uid://dqoeyba2scmd0" path="res://scenes/resupply.tscn" id="6_qdjft"]
[ext_resource type="Script" path="res://scripts/ParallaxBackground.gd" id="7_bxrx6"]
[ext_resource type="Texture2D" uid="uid://d2eme7qk2wls0" path="res://assets/Paralax-sky.png" id="7_nu2m4"]
[ext_resource type="Texture2D" uid="uid://5orng4uc4snb" path="res://assets/Paralax-clouds.png" id="8_5obu5"]
[ext_resource type="Texture2D" uid="uid://bnp2ria37l8pl" path="res://assets/Paralax-back hill.png" id="9_da0qk"]
[ext_resource type="Texture2D" uid="uid://bx8p6uo6k8x71" path="res://assets/Paralax-hills.png" id="10_hn2ae"]

[node name="Main" type="Node"]
script = ExtResource("1_l77q7")
fire_scene = ExtResource("3_lqplh")

[node name="Level" parent="." instance=ExtResource("1_cxjqo")]
position = Vector2(722, -148)

[node name="Resupply" parent="." instance=ExtResource("6_qdjft")]
position = Vector2(1642, -147)

[node name="Player" parent="." instance=ExtResource("2_4kq3l")]
position = Vector2(141, -139)
rotation = -0.00283527

[node name="Fire" parent="." instance=ExtResource("3_lqplh")]
position = Vector2(1622, -166)

[node name="FireTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="SpawnPosition" type="Marker2D" parent="."]

[node name="SpawnArea" type="ReferenceRect" parent="." groups=["spawn_area"]]
offset_left = 1737.0
offset_top = -248.0
offset_right = 3689.0
offset_bottom = -162.0
border_width = 0.1

[node name="Marker2D" type="Marker2D" parent="SpawnArea"]
position = Vector2(1941, 84)

[node name="HUD" parent="." instance=ExtResource("5_5yc50")]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
offset = Vector2(0, -376)
scale = Vector2(0.3, 0.3)
transform = Transform2D(0.3, 0, 0, 0.3, 0, -376)
follow_viewport_enabled = true
script = ExtResource("7_bxrx6")

[node name="ParallaxLayer_SKY" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.1, 0.1)
motion_mirroring = Vector2(1920, 0)

[node name="Sky" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer_SKY"]
texture = ExtResource("7_nu2m4")

[node name="ParallaxLayer_CLOUD" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1920, 0)

[node name="Cloud" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer_CLOUD"]
texture = ExtResource("8_5obu5")

[node name="ParallaxLayer_Back_HILL" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.4, 0.4)
motion_mirroring = Vector2(1920, 0)

[node name="Back_Hill" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer_Back_HILL"]
texture = ExtResource("9_da0qk")

[node name="ParallaxLayer_Front_HILL" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(1920, 0)

[node name="Front_Hill" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer_Front_HILL"]
texture = ExtResource("10_hn2ae")

[connection signal="water_level_changed" from="Player" to="HUD" method="_on_player_water_level_changed"]
[connection signal="water_used" from="Player" to="HUD" method="_on_water_used"]
[connection signal="score" from="Fire" to="." method="increase_score"]
[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
